# snes-ra-adapter-poc

./: README.md
snes-esp-firmware/: snes-esp-firmware.ino
snes-pico-firmware/: .gitignore  CMakeLists.txt  CMakePresets.json
snes-pico-firmware/src/: CMakeLists.txt  files.cmake  main.c  memory-bus.pio  retroachievements.c  retroachievements.h
snes-pico-firmware/tests/: CMakeLists.txt  test_main.c
